Axes work now. X spacing is correct.

--- a/d3js/p1/styles.scss
+++ b/d3js/p1/styles.scss
@@ -1,20 +1,40 @@
 
 
-.data-items {
-    position: relative;
-    margin-top: 250px;
+$width: 960px;
 
-    div {
-        display: inline;
-    }
+
+body {
+    background-color: darken(cyan, 20%);
+    font-family: Verdana, serif;
+};
+
+.plot-container {
+    background-color: darken(white, 11%);
+    margin: 0 auto;
+    width: $width;
 };
 
 rect {
-    fill: blue;
+    fill: red;
 };
 
 rect:hover {
-    fill: darken(blue, 20%);
+    fill: lighten(blue, 20%);
 };
 
+.my-tooltip {
+    color: white;
+    height: 75px;
+    width: 200px;
+    background-color: rgba(192, 192, 192, 0.5);
+    border: 1px solid black;
+    border-radius: 3px;
+};
 
+.dollars {
+    font-size: 20px;
+};
+
+.text-primary {
+    color: white;
+};
